compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_const_extfn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const foo = 1\n\n@external(erlang, \"module2\", \"function2\")\nfn foo() -> Float\n"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │
1 │ const foo = 1
  │ ^^^^^^^^^ First defined here
  ·
4 │ fn foo() -> Float
  │ ^^^^^^^^ Redefined here

`foo` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

