compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_const_names.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const duplicate = 1\npub const duplicate = 1"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │
1 │ const duplicate = 1
  │ ^^^^^^^^^^^^^^^ First defined here
2 │ pub const duplicate = 1
  │ ^^^^^^^^^^^^^^^^^^^ Redefined here

`duplicate` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

