compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_extfn_const.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n@external(erlang, \"module1\", \"function1\")\nfn foo() -> Float\n\nconst foo = 2"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:3:1
  │
3 │ fn foo() -> Float
  │ ^^^^^^^^ First defined here
4 │ 
5 │ const foo = 2
  │ ^^^^^^^^^ Redefined here

`foo` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

