compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_extfn_fn_extfn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "external fn foo() -> Float =\n  \"module1\" \"function1\"\nfn foo() { 2 }\nexternal fn foo() -> Float =\n  \"module3\" \"function3\""
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │  
1 │ ╭ external fn foo() -> Float =
2 │ │   "module1" "function1"
  │ ╰───────────────────────^ First defined here
3 │   fn foo() { 2 }
  │   ^^^^^^^^ Redefined here

`foo` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

